Update scripts and add example notebooks
+ Update two scripts score_utils.py, simulations_utils.py
+ Add a notebook spectral_clustering.ipynb as an example of estimating dynamic-Mixed-Membership-Stochastic-Block model
+ Add a notebook network_visualization.ipynb as an example of visualizing networks

--- a/spectral_clustering.ipynb
+++ b/spectral_clustering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Try to estimate dMMSB in a frequentist approach (spectral clustering). Main steps:\n",
+    "## Estimate dMMSB in by spectral clustering. Main steps:\n",
     "+ Estimate memberships and $B$ at each time point separately\n",
     "+ Match the results at different time points by permute the $K$ (number of clusters) coordinates of some memberships. Such permutation is necessary becuase the result of clustering at a single time point remains the same after permuting the estimated labels, but the label of a single node from time to time will not change too much: we need some permutation to gurantee this.\n",
     "+ Spectral clustering is much faster than the Bayesian approach (EM)."
@@ -71,13 +71,6 @@
     "vertices = result[2]\n",
     "centers = result[3]\n",
     "Pi_hat = result[4]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "+ As we mentioned before, estimate of $B$ is not accurate"
    ]
   },
   {
@@ -670,13 +663,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "+ spectral clustering does not estimate B very well"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -796,13 +782,6 @@
    "source": [
     "result = score_dMMSB(K = 3, E = E)\n",
     "Pi_hat, B_hat = result[:2]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "+ score does not estimate B very well"
    ]
   },
   {
@@ -1008,13 +987,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "+ score does not estimate B very well"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -1115,7 +1087,7 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
